# ecp-playground

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
config/: gene-000.toml
gui/: CMakeLists.txt  README.md  main.cpp  main_window.cpp  main_window.hpp
gui/core/: commands.hpp  controller_worker.cpp  controller_worker.hpp  telemetry.hpp  update_scheduler.cpp  update_scheduler.hpp
gui/widgets/: axis_overview_panel.cpp  axis_overview_panel.hpp  cia402_state_widget.cpp  cia402_state_widget.hpp  connection_panel.cpp  connection_panel.hpp  drives_diagnostics_panel.cpp  drives_diagnostics_panel.hpp  enhanced_limits_panel.cpp  enhanced_limits_panel.hpp  event_log_panel.cpp  event_log_panel.hpp  jog_panel.cpp  jog_panel.hpp  limits_panel.cpp  limits_panel.hpp  plot_panel.cpp  plot_panel.hpp  trajectory_panel.cpp  trajectory_panel.hpp
gui/wizard/: setup_wizard.cpp  setup_wizard.hpp
include/actuator_test/: device.hpp  logging.hpp  math.hpp  runtime.hpp  safety.hpp  session.hpp  settings.hpp  terminal.hpp  trajectory.hpp  types.hpp
scripts/: apply-actuator-capabilities.sh  plots.py
src/: actuator-cli.cpp  actuator-test-spline.cpp  multi-master.cpp
src/actuator_test/: device.cpp  logging.cpp  runtime.cpp  safety.cpp  session.cpp  settings.cpp  trajectory.cpp
